# Rust-6502

./: ASM.md  Cargo.toml  DemoProgram.md  LICENSE  Logo.md  Makefile  Palette.md  README.md  Screen.md  TODO.todo  img2_6502asm.py  output.s
src/: bus.rs  cpu.rs  disasm.rs  main.rs  opcodes.rs  tui.rs
src/asm/: linker.cfg  program.s
src/asm/hackclub/: hackclub_logo_demo.s  linker.cfg
src/asm/helloworld/: helloworld_demo.s
src/asm/rainbow/: rainbow_demo.s
tools/: img2_6502asm.py
