[package]
name = "rust6502"
version = "1.0.0"
edition = "2024"
description = "A MOS 6502 CPU emulator"
license = "MIT"
repository = "https://github.com/wirenux/Rust-6502"

include = [
    "src/*.rs",
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
ansi-to-tui = "8.0.1"